force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/BLN_AppointmentShorteningConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>This holds configuration for Appointment Shortening for different Business Units</description>
    <label>AppointmentShorteningConfiguration</label>
    <pluralLabel>AppointmentShorteningConfigurations</pluralLabel>
</CustomObject>