force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_Active__c.field-meta.xml
<CustomField>
    <fullName>BLN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-777</description>
    <inlineHelpText>Activate this configuration</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>