force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_AllowVirtualTech__c.field-meta.xml
<CustomField>
    <fullName>BLN_AllowVirtualTech__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-777To include Virtual Technicians or not</description>
    <inlineHelpText>To include Virtual Technicians or not</inlineHelpText>
    <label>Allow Virtual Technicians</label>
    <type>Checkbox</type>
</CustomField>