force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_ArrivalStartTimeAdjustmentInMinutes__c.field-meta.xml
<CustomField>
    <fullName>BLN_ArrivalStartTimeAdjustmentInMinutes__c</fullName>
    <description>FOUK-777Time to be subtracted from Arrival Window Start in minutes</description>
    <inlineHelpText>Time to be subtracted from Arrival Start in minuteseg if Arr Start is 10:30and Time off is 30 mins, so new Arr Start will be 10:00</inlineHelpText>
    <label>Arrival Start Time Adjustment (In Minute</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>