force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessUnit__c</fullName>
    <description>FOUK-777</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
                <default>true</default>
                <label>United Kingdom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>