force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_HorizonInHours__c.field-meta.xml
<CustomField>
    <fullName>BLN_HorizonInHours__c</fullName>
    <description>FOUK-777
Horizon in hours</description>
    <inlineHelpText>Next upcomming appointments time frame
e.g 48 hrs means all upcomming appointments in next 48hrs</inlineHelpText>
    <label>Horizon in Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>