force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_MaxPlnDurationInMins__c.field-meta.xml
<CustomField>
    <fullName>BLN_MaxPlnDurationInMins__c</fullName>
    <description>FOUK-777
Max allowed Planned Duration</description>
    <label>Max Planned Duration  in Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>