force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_MaxSchDurationInMins__c.field-meta.xml
<CustomField>
    <fullName>BLN_MaxSchDurationInMins__c</fullName>
    <description>FOUK-777
Max allowed Scheduled Duration</description>
    <label>Max Scheduled Duration in Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>