force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_RoundedDurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>BLN_RoundedDurationInMinutes__c</fullName>
    <description>FOUK-777
Round Down time in minutes</description>
    <inlineHelpText>Round to nearest time in multiples of given number. e.g if time is 1:34, should be round down to 1:30</inlineHelpText>
    <label>Rounded Duration (In Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>