force-app/main/default/objects/BLN_AppointmentShorteningConfiguration__mdt/fields/BLN_ShorteningWindowInMinutes__c.field-meta.xml
<CustomField>
    <fullName>BLN_ShorteningWindowInMinutes__c</fullName>
    <description>FOUK-777Time to be added to Due Date</description>
    <inlineHelpText>Time to be added to Due Dateeg Due Date is 15:00 and Time added is 180, so new Due Date is 18:00</inlineHelpText>
    <label>Shortening Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>